fix alignment for credits

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -379,6 +379,7 @@ h5 {
 
 .copyright {
   color: #fff;
+  text-align: center;
 }
 @media (max-width: 962px) {
 }
